# autodocx

./: AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
autodocx/: __init__.py  renderer.py
autodocx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
autodocx/contrib/: __init__.py  analysis.py  cli.py  config.py  db.py  resolve_all.py  utils.py
autodocx/contrib/render/: base.py  myst_.py  rst_.py
autodocx/contrib/sphinx/: autodoc.py  docstring.py  extension.py  summary.py  utils.py
